tests/NormalTests/paczka1/fuzzy1/58719313.err
Error in line 7: A909 S540 37,7
Error in line 8: A909 A909 59,0
